--- a/FeedCurator/Base.lproj/Main.storyboard
+++ b/FeedCurator/Base.lproj/Main.storyboard
@@ -676,7 +676,7 @@
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="196" y="240" width="480" height="270"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
-                        <toolbar key="toolbar" implicitIdentifier="62452B8F-7EA7-477D-8149-74FB447EEF56" autosavesConfiguration="NO" displayMode="iconOnly" sizeMode="regular" id="NHV-De-FlV">
+                        <toolbar key="toolbar" implicitIdentifier="62452B8F-7EA7-477D-8149-74FB447EEF56" centeredItem="Rsh-bx-k9r" autosavesConfiguration="NO" displayMode="iconOnly" sizeMode="regular" id="NHV-De-FlV">
                             <allowedToolbarItems>
                                 <toolbarItem implicitItemIdentifier="NSToolbarSpaceItem" id="Nxd-mo-7cY"/>
                                 <toolbarItem implicitItemIdentifier="NSToolbarFlexibleSpaceItem" id="3ic-jy-Ogu"/>
@@ -713,9 +713,25 @@
                                         </buttonCell>
                                     </button>
                                 </toolbarItem>
+                                <toolbarItem implicitItemIdentifier="7B48A55B-B800-48D8-8A8A-2C7740BD7B7B" label="Title" paletteLabel="Title" sizingBehavior="auto" id="Rsh-bx-k9r">
+                                    <nil key="toolTip"/>
+                                    <button key="view" verticalHuggingPriority="750" id="lYO-a6-njK">
+                                        <rect key="frame" x="0.0" y="14" width="127" height="25"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        <buttonCell key="cell" type="roundTextured" title="Title" bezelStyle="texturedRounded" alignment="center" lineBreakMode="truncatingTail" state="on" imageScaling="proportionallyDown" inset="2" id="Unb-Dj-43f">
+                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                        </buttonCell>
+                                        <connections>
+                                            <action selector="titleButtonClicked:" target="jGA-0Y-lOj" id="h2H-4F-mpd"/>
+                                        </connections>
+                                    </button>
+                                </toolbarItem>
                             </allowedToolbarItems>
                             <defaultToolbarItems>
                                 <toolbarItem reference="gjV-vs-8eC"/>
+                                <toolbarItem reference="3ic-jy-Ogu"/>
+                                <toolbarItem reference="Rsh-bx-k9r"/>
                                 <toolbarItem reference="3ic-jy-Ogu"/>
                                 <toolbarItem reference="chs-dC-a4c"/>
                                 <toolbarItem reference="eTs-QI-WF7"/>
@@ -726,6 +742,7 @@
                         </connections>
                     </window>
                     <connections>
+                        <outlet property="titleButton" destination="lYO-a6-njK" id="muL-km-wTJ"/>
                         <segue destination="5gI-5U-AMq" kind="relationship" relationship="window.shadowedContentViewController" id="nsd-lR-9xd"/>
                     </connections>
                 </windowController>
@@ -741,25 +758,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="1048" height="446"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="mif-Zq-fIj">
-                                <rect key="frame" x="20" y="404" width="250" height="22"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="250" id="PEd-KP-fKc"/>
-                                </constraints>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="Title" drawsBackground="YES" id="Wcy-Aa-s4P">
-                                    <font key="font" usesAppearanceFont="YES"/>
-                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
                             <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="liG-9d-jHo">
-                                <rect key="frame" x="20" y="20" width="1008" height="376"/>
+                                <rect key="frame" x="0.0" y="0.0" width="1048" height="446"/>
                                 <clipView key="contentView" id="EU4-ss-UzT">
-                                    <rect key="frame" x="1" y="0.0" width="1006" height="375"/>
+                                    <rect key="frame" x="1" y="0.0" width="1046" height="445"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="xqd-er-Qxv" viewBased="YES" indentationPerLevel="16" outlineTableColumn="eGF-8D-w70" id="Oxa-E7-vjW" customClass="OutlineView" customModule="Feed_Curator" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="1006" height="350"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="1046" height="420"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -837,7 +843,7 @@
                                                         </tableCellView>
                                                     </prototypeCellViews>
                                                 </tableColumn>
-                                                <tableColumn identifier="feedColumn" width="347" minWidth="10" maxWidth="3.4028234663852886e+38" id="YGn-Km-xgD">
+                                                <tableColumn identifier="feedColumn" width="387" minWidth="10" maxWidth="3.4028234663852886e+38" id="YGn-Km-xgD">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Feed URL">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -851,11 +857,11 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView identifier="feedCell" id="Z0u-Bn-WnP">
-                                                            <rect key="frame" x="657" y="1" width="347" height="17"/>
+                                                            <rect key="frame" x="657" y="1" width="387" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yTw-6R-OZM">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="347" height="17"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="387" height="17"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="YT5-sD-SZg">
                                                                         <font key="font" metaFont="system"/>
@@ -883,23 +889,20 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <tableHeaderView key="headerView" id="xqd-er-Qxv">
-                                    <rect key="frame" x="0.0" y="0.0" width="1006" height="25"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="1046" height="25"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableHeaderView>
                             </scrollView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="mif-Zq-fIj" firstAttribute="leading" secondItem="ERx-hH-rdd" secondAttribute="leading" constant="20" id="Bvb-Ay-9bW"/>
-                            <constraint firstItem="mif-Zq-fIj" firstAttribute="top" secondItem="ERx-hH-rdd" secondAttribute="top" constant="20" id="Jhc-NA-Ex0"/>
-                            <constraint firstItem="liG-9d-jHo" firstAttribute="leading" secondItem="ERx-hH-rdd" secondAttribute="leading" constant="20" id="M7J-EF-Kbj"/>
-                            <constraint firstAttribute="trailing" secondItem="liG-9d-jHo" secondAttribute="trailing" constant="20" id="YKd-A8-lKv"/>
-                            <constraint firstItem="liG-9d-jHo" firstAttribute="top" secondItem="mif-Zq-fIj" secondAttribute="bottom" constant="8" symbolic="YES" id="fI5-ds-h9L"/>
-                            <constraint firstAttribute="bottom" secondItem="liG-9d-jHo" secondAttribute="bottom" constant="20" id="jGb-5o-93A"/>
+                            <constraint firstItem="liG-9d-jHo" firstAttribute="top" secondItem="ERx-hH-rdd" secondAttribute="top" id="J6z-6y-QgP"/>
+                            <constraint firstItem="liG-9d-jHo" firstAttribute="leading" secondItem="ERx-hH-rdd" secondAttribute="leading" id="M7J-EF-Kbj"/>
+                            <constraint firstAttribute="trailing" secondItem="liG-9d-jHo" secondAttribute="trailing" id="YKd-A8-lKv"/>
+                            <constraint firstAttribute="bottom" secondItem="liG-9d-jHo" secondAttribute="bottom" id="jGb-5o-93A"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="feedOutlineView" destination="Oxa-E7-vjW" id="les-zm-LlH"/>
-                        <outlet property="titleTextField" destination="mif-Zq-fIj" id="IYZ-4j-ekC"/>
                     </connections>
                 </viewController>
                 <customObject id="2Tp-Fl-jBw" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
