--- a/FeedCurator/Sheets/AddFeed.xib
+++ b/FeedCurator/Sheets/AddFeed.xib
@@ -1,24 +1,89 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11163" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11163"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14490.70"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="AddFeed" customModuleProvider="target">
+        <customObject id="-2" userLabel="File's Owner" customClass="AddFeed" customModule="Feed_Curator" customModuleProvider="target">
             <connections>
+                <outlet property="addButton" destination="5Su-Na-dec" id="m7K-YR-g16"/>
+                <outlet property="cancelButton" destination="FWW-BG-QJJ" id="dUJ-QC-swa"/>
+                <outlet property="progressIndicator" destination="FKj-o5-ntX" id="DdH-TY-bXT"/>
+                <outlet property="urlTextField" destination="boo-TW-Fe0" id="bsw-Zj-QDh"/>
                 <outlet property="window" destination="F0z-JX-Cv5" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="F0z-JX-Cv5">
+        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="F0z-JX-Cv5">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="196" y="240" width="480" height="270"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="877"/>
-            <view key="contentView" wantsLayer="YES" id="se5-gp-TjO">
+            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
+            <view key="contentView" wantsLayer="YES" misplaced="YES" id="se5-gp-TjO">
                 <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="boo-TW-Fe0">
+                        <rect key="frame" x="20" y="49" width="350" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="350" id="6fF-Rt-qdU"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="350" id="hod-tG-Vhl"/>
+                        </constraints>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="URL" drawsBackground="YES" id="5FD-Wa-hyJ">
+                            <font key="font" usesAppearanceFont="YES"/>
+                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                        <connections>
+                            <outlet property="delegate" destination="-2" id="7L0-by-keo"/>
+                        </connections>
+                    </textField>
+                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="5Su-Na-dec">
+                        <rect key="frame" x="294" y="13" width="82" height="32"/>
+                        <buttonCell key="cell" type="push" title="Add" bezelStyle="rounded" alignment="center" enabled="NO" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="19d-KB-dcD">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                            <string key="keyEquivalent" base64-UTF8="YES">
+DQ
+</string>
+                        </buttonCell>
+                        <connections>
+                            <action selector="add:" target="-2" id="UkG-SK-3uq"/>
+                        </connections>
+                    </button>
+                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="FWW-BG-QJJ">
+                        <rect key="frame" x="212" y="13" width="82" height="32"/>
+                        <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="DFJ-a9-dMi">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                            <string key="keyEquivalent" base64-UTF8="YES">
+Gw
+</string>
+                        </buttonCell>
+                        <connections>
+                            <action selector="cancel:" target="-2" id="QKG-9e-Nc5"/>
+                        </connections>
+                    </button>
+                    <progressIndicator hidden="YES" wantsLayer="YES" maxValue="100" indeterminate="YES" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="FKj-o5-ntX">
+                        <rect key="frame" x="20" y="21" width="190" height="20"/>
+                    </progressIndicator>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="5Su-Na-dec" firstAttribute="leading" secondItem="FWW-BG-QJJ" secondAttribute="trailing" constant="12" symbolic="YES" id="5q5-Pk-Ft0"/>
+                    <constraint firstItem="5Su-Na-dec" firstAttribute="width" secondItem="FWW-BG-QJJ" secondAttribute="width" id="6QL-ID-tCL"/>
+                    <constraint firstItem="FKj-o5-ntX" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" constant="20" id="RA4-JW-9Hr"/>
+                    <constraint firstItem="FKj-o5-ntX" firstAttribute="centerY" secondItem="FWW-BG-QJJ" secondAttribute="centerY" id="RFk-Pi-YwD"/>
+                    <constraint firstItem="boo-TW-Fe0" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" constant="20" id="Rb5-xy-LAA"/>
+                    <constraint firstItem="FWW-BG-QJJ" firstAttribute="leading" secondItem="FKj-o5-ntX" secondAttribute="trailing" constant="8" symbolic="YES" id="WdG-Xp-Q10"/>
+                    <constraint firstAttribute="bottom" secondItem="5Su-Na-dec" secondAttribute="bottom" constant="20" id="din-Zc-fF3"/>
+                    <constraint firstItem="5Su-Na-dec" firstAttribute="top" secondItem="boo-TW-Fe0" secondAttribute="bottom" constant="8" id="ira-v7-0CG"/>
+                    <constraint firstItem="boo-TW-Fe0" firstAttribute="top" secondItem="se5-gp-TjO" secondAttribute="top" constant="20" id="k1X-c0-4gU"/>
+                    <constraint firstItem="FWW-BG-QJJ" firstAttribute="centerY" secondItem="5Su-Na-dec" secondAttribute="centerY" id="s0H-xx-fDh"/>
+                    <constraint firstAttribute="trailing" secondItem="boo-TW-Fe0" secondAttribute="trailing" constant="20" id="sgF-Oc-yaE"/>
+                    <constraint firstAttribute="trailing" secondItem="5Su-Na-dec" secondAttribute="trailing" constant="20" id="xLk-78-k7B"/>
+                </constraints>
             </view>
             <connections>
                 <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
